   
   o  rgl package no longer unloaded when the Commander is closed.
   
Version 1.5-6

   o  New Italian translation (courtesy of Stefano Calza).
   
Version 1.6-0

   o  Made compatible with car version 2.0-0.
   
   o  Messages window is now sizeable (via messages.height Rcmdr option) and editable (suggested by Rob James).
   
   o  Small interface improvements.
   
   o  Small fixes.
   
Version 1.6-1

   o  Datasets with invalid names reported by packages no longer listed in "Data > Data in Packages > Select data set from an attached package" dialog (problem reported by Gabor Grothendieck).
   
   o  Fixed bug in changing contrasts option in "Tools > Options" dialog (reported by Kristian Hovde Liland).
   
   o  Updated French, Japanese, Romanian, Russian, and Spanish translations (thanks to Philippe Grosjean, Takaharu Araki, Adrian Dusa, Alexey Shipunov, and Manuel Munoz Marquez).
   
Version 1.6-2

   o  Updated Brazilian Portuguese and Italian translations (thanks to Adriano Azevedo-Filho and Stefano Calza).
   
   o  Fixed bug in read data set from package dialog (reported by Erich Neuwirth).
   
Version 1.6-3

   o  Modified plotMeans to allow arguments to be passed through to plot (following question by Marylin Bejarano).
   
   o  Added output of pairwise tests to one-way ANOVA (suggested by Bruce McCulllough).
   
   o  Fixed bug in model-formula scrollbar for models with no left-hand-side.
   
Version 1.6-4

   o Improvements to probability distribution dialogs (contributed by Miroslav Ristic).
   
   o Control-left-mouse-button now brings up context edit menu, for use with one-button mice (after a question by Erich Neuwirth). 
   
   o Corrected order of file extensions in file dialogs.
   
   o The new BIC() function in R 2.13.0 is used in preference to AIC() to compute the BIC. nobs() is no longer needed, and is removed so as not to conflict with nobs() in R 2.13.0.

Version 1.6-5

   o Nothing yet!